# MyGarden

./: .gitignore  README.md  flake.nix  package-lock.json  package.json  vite.config.ts
src/: App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs
src-tauri/src/thingspeak-rs/: Cargo.toml
src-tauri/src/thingspeak-rs/src/: lib.rs
src/components/: Cog.tsx  Dashboard.css  Dashboard.tsx  Display.tsx  MainHeader.tsx  PlotChart.tsx  SettingContainer.tsx  Settings.tsx  settings.css  settings.tsx
src/functions/: Checker.tsx  Notify.tsx  checker.ts  checker.tsx  fetcher.tsx  notify.tsx  utils.ts
src/types/: checker.tsx  display.tsx  formtype.tsx  settings.tsx  tahan.tsx  types.ts  types.tsx
