[package]
name = "tahan-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version =  "1.9.1", features = [ "serde" ] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = { version = "2.4.3", features = ["json"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
dynfmt = { version = "0.1.5", features = ["curly"] }
specta = { version = "=2.0.0-rc.22", features = ["function", "tokio", "uuid", "serde"] }
specta-typescript = "^0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "javascript", "typescript"] }
chrono = { version = "0.4.41", features = ["serde"] }
thingspeak-rs = { path = "./src/thingspeak-rs"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
