[package]
name = "thingspeak-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
dynfmt = { version = "0.1.5", features = ["curly"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0"
reqwest = { version = "0.12.20", features = ["json"] }
